@@ -1,3 +1,11 @@
+2006-12-17  Christian Persch  <chpe@cvs.gnome.org>
+
+	* data/Makefile.am:
+	* src/Makefile.am:
+	* src/window-commands.c: (window_cmd_help_about):
+	
+	Load about data from file.
+
 2006-12-17  Jean-François Rameau  <jframeau@cvs.gnome.org>
 
 	* embed/ephy-adblock-manager.c:
